--- a/SCM_Water_frontDesk/pom.xml
+++ b/SCM_Water_frontDesk/pom.xml
@@ -13,5 +13,9 @@
   		<artifactId>junit</artifactId>
   		<version>4.11</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.thymeleaf</groupId>
+  		<artifactId>thymeleaf-spring5</artifactId>
+  	</dependency>
   </dependencies>
 </project>
