--- a/SCM_Water_frontDesk/src/main/resources/application.yml
+++ b/SCM_Water_frontDesk/src/main/resources/application.yml
@@ -8,6 +8,9 @@ spring:
     url: jdbc:mysql://localhost:3306/scm_water
     username: root
     password: 1234
+  thymeleaf:
+    cache: false
+ 
 logging:
   level: 
     mapper: debug
