--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-thymeleaf</artifactId>
     </dependency>
+  	<dependency>
+  		<groupId>commons-fileupload</groupId>
+  		<artifactId>commons-fileupload</artifactId>
+  		<version>1.3.3</version>
+  	</dependency>
   </dependencies>
   <modules>
   	<module>SCM_Water_frontDesk</module>
