--- a/SCM_Water_Back/src/main/resources/application.yml
+++ b/SCM_Water_Back/src/main/resources/application.yml
@@ -10,11 +10,16 @@ spring:
     password: 1234    
   thymeleaf:
     cache: false
+  servlet:
+    multipart:
+      enabled: false
+      max-file-size: 2MB
+      max-request-size: 20MB 
 logging:
   level: 
     mapper: debug
-#  thymeleaf:
-#     cache:false
-#     encoding:utf-8
-     
+    
+        
+ 
+ 
      
