--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
   		<artifactId>commons-fileupload</artifactId>
   		<version>1.3.3</version>
   	</dependency>
+  	<dependency>
+  		<groupId>commons-io</groupId>
+  		<artifactId>commons-io</artifactId>
+  		<version>2.6</version>
+  	</dependency>
   </dependencies>
   <modules>
   	<module>SCM_Water_frontDesk</module>
