--- a/SCM_Water_Back/src/main/resources/application.yml
+++ b/SCM_Water_Back/src/main/resources/application.yml
@@ -13,7 +13,11 @@ spring:
 logging:
   level: 
     mapper: debug
-    
+pagehelper:
+  helperDialect: mysql
+  reasonable: true
+  supportMethodsArguments: true
+  params: count=countSql
         
  
  
