--- a/SCM_Water_frontDesk/src/main/resources/application.yml
+++ b/SCM_Water_frontDesk/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
       suffix: .html
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/scm_water
+    url: jdbc:mysql://192.168.43.50:3306/scm_water
     username: root
     password: 911816
   thymeleaf:
